Make meme and template images responsive on show page. Also, height property was not affecting image in meme creation, so replace it with a bottom margin

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,12 +47,12 @@
   height: 150px !important;
 }
 
-#meme {
-  height: 500px !important;
+#meme-creation {
+  margin-bottom: 50px;
 }
 
-#template {
-  height: 500px !important;
+#image {
+  max-height: 500px;
 }
 
 // Search bar in main content panel (i.e. for templates)
