--- a/app/views/memes/new.html.erb
+++ b/app/views/memes/new.html.erb
@@ -26,7 +26,7 @@
     <% end %>
 	  <br>
     <br>
-    <div class="xmeme" id="meme">
+    <div class="xmeme" id="meme-creation">
       <figure>
         <figcaption id="topcaption"></figcaption>
         <img id="memeimg">
