--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-  <%= image_tag(@template.image.url, :id => "template") %>
+  <%= image_tag(@template.image.url, :id => "image", :class => "img-responsive") %>
 </p>
 
 <p>
