--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <%= image_tag(@meme.image.url, :id => "meme", :data => { :memeid => @meme.id }) %>
+  <%= image_tag(@meme.image.url, :id => "image", :class => "img-responsive", :data => { :memeid => @meme.id }) %>
 </p>
 
 <p>
