--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -18,4 +18,7 @@
 <%= link_to 'Back', memes_path %>
 <% if user_signed_in? %>
   | <%= link_to 'Comment', new_comment_path(comment: { meme_id: @meme.id, user_id: current_user.id }) %>
+  <% if current_user == @meme.user %>
+    | <%= link_to 'Delete', @meme, method: :delete %>
+  <% end %>
 <% end %>
