change css coloring; order by date

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -174,3 +174,10 @@ div.col-md-3 > form {
     bottom: 0;
     padding-bottom: 0;
 }
+
+.upvote-active {
+  color: #41be47;
+}
+.downvote-active {
+  color: red;
+}
