Actually go back when clicking back

--- a/app/views/templates/edit.html.erb
+++ b/app/views/templates/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', template: @template %>
 
 <%= link_to 'Show', @template %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Back', :back %>
