--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -13,4 +13,4 @@
 </p>
 
 <%= link_to 'Edit', edit_template_path(@template) %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Back', :back %>
