--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
           </div>
           <ul class="nav nav-pills nav-stacked">
             <li role="presentation" id="nav-recent"><%= link_to("Recent", root_path) %></li>
-            <li role="presentation" id="nav-popular"><a href="#">Popular</a></li>
+            <li role="presentation" id="nav-popular"><%= link_to("Popular", popular_memes_path) %></li>
             <li role="presentation" id="nav-templates"><%= link_to("Templates", templates_path) %></li>
             <li role="presentation" id="nav-random"><%= link_to("Random", random_path) %></li>
             <% if user_signed_in? %>
