--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,4 +1,4 @@
-
+<% cache [current_user, @template] do %>
 <p>
   <strong>Name:</strong>
   <%= @template.name %>
@@ -11,9 +11,9 @@
 <p>
   submitted <%= time_ago_in_words(@template.created_at) %> ago by <%= link_to(@template.user, @template.user) %>
 </p>
-
 <%= link_to 'Back', :back %> |
 <% if user_signed_in? and current_user == @template.user %>
 <%= link_to 'Edit', edit_template_path(@template) %> |
 <%= link_to 'Delete', @template, method: :delete, data: { confirm: "Are you sure?" }%>
+<% end %>
 <% end %>
