--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,5 +2,5 @@
   <%= link_to(comment.user, comment.user)%>:
   <%= comment.message %><br>
   <%= link_to 'Reply', new_comment_path(comment: { meme_id: comment.meme.id, user_id: current_user.id, parent_id: comment.id }) if user_signed_in? %>
-  <%= render comment.replies %>
+  <%= render partial: 'comments/comment', collection: comment.replies, cache: true %>
 </div>
