--- a/app/views/memes/_memes.html.erb
+++ b/app/views/memes/_memes.html.erb
@@ -1,6 +1,7 @@
 <hr />
 <div class="row">
   <% @memes.each do |meme| %>
+    <% cache [current_user, meme] do %>
     <div class="col-xs-6 col-sm-4 col-md-3 card">
       <div class="thumbnail">
         <%= link_to(image_tag(meme.image.url, :class => "meme-img", :data => { :memeid => meme.id }),
@@ -19,6 +20,7 @@
       %>
     </div>
     </div>
+    <% end %>
   <% end %>
   <% if @memes.blank? %>
     <div class="col-md-12">
