--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<% cache [current_user, @meme] do %>
 <p>
   <%= image_tag(@meme.image.url, :id => "image", :class => "img-responsive", :data => { :memeid => @meme.id }) %>
 </p>
@@ -21,14 +21,14 @@
 <% if @meme.root_comments.present? %>
   <p>
     <strong>Comments:</strong>
-    <%= render @meme.root_comments %>
+    <%= render partial: 'comments/comment', collection: @meme.root_comments, cache: true %>
   </p>
 <% end %>
-
 <%= link_to 'Back', :back %>
 <% if user_signed_in? %>
   | <%= link_to 'Comment', new_comment_path(comment: { meme_id: @meme.id, user_id: current_user.id }) %>
   <% if current_user == @meme.user %>
     | <%= link_to 'Delete', @meme, method: :delete, data: { confirm: "Are you sure?" }%>
   <% end %>
+<% end %>
 <% end %>
